# SO2P

./: .gitignore  CMakeLists.txt  README.md
km/: main.cpp
km/util/: PhilosopherState.h
